--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/flpnascto/template-nodejs/issues"
   },
-  "homepage": "https://github.com/flpnascto/template-nodejs#readme"
+  "homepage": "https://github.com/flpnascto/template-nodejs#readme",
+  "devDependencies": {
+    "husky": "^8.0.1"
+  }
 }
