--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-import": "^2.26.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "pretty-quick": "^3.1.3"
   }
 }
